--- a/V2/App/Kinect2Sample/MainPage.xaml
+++ b/V2/App/Kinect2Sample/MainPage.xaml
@@ -54,6 +54,7 @@
                 <StackPanel Orientation="Horizontal">
                     <Button Content="Infrared" Style="{StaticResource FrameSelectorButtonStyle}" Click="InfraredButton_Click"/>
                     <Button Content="Color" Style="{StaticResource FrameSelectorButtonStyle}" Click="ColorButton_Click"/>
+                    <Button Content="Depth" Style="{StaticResource FrameSelectorButtonStyle}" Click="DepthButton_Click"/>
                 </StackPanel>
             </ScrollViewer>
         </Grid>
