--- a/V2/App/Kinect2Sample/MainPage.xaml
+++ b/V2/App/Kinect2Sample/MainPage.xaml
@@ -52,9 +52,16 @@
             ScrollViewer.HorizontalScrollBarVisibility="Auto" 
             ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <StackPanel Orientation="Horizontal">
-                    <Button Content="Infrared" Style="{StaticResource FrameSelectorButtonStyle}" Click="InfraredButton_Click"/>
-                    <Button Content="Color" Style="{StaticResource FrameSelectorButtonStyle}" Click="ColorButton_Click"/>
-                    <Button Content="Depth" Style="{StaticResource FrameSelectorButtonStyle}" Click="DepthButton_Click"/>
+                    <Button Content="Infrared" Style="{StaticResource FrameSelectorButtonStyle}"
+                            Click="InfraredButton_Click"/>
+                    <Button Content="Color" Style="{StaticResource FrameSelectorButtonStyle}" 
+                            Click="ColorButton_Click"/>
+                    <Button Content="Depth" Style="{StaticResource FrameSelectorButtonStyle}" 
+                            Click="DepthButton_Click"/>
+                    <Button Style="{StaticResource FrameSelectorButtonStyle}" 
+                            Click="BodyMask_Click">
+                        <TextBlock Text="Body Mask" TextWrapping="Wrap"/>
+                    </Button>
                 </StackPanel>
             </ScrollViewer>
         </Grid>
