--- a/V2/Tracking/Kinect2Sample/MainPage.xaml
+++ b/V2/Tracking/Kinect2Sample/MainPage.xaml
@@ -48,6 +48,10 @@
                 <TextBlock Text="{Binding CurrentFrameDescription.Height}"/>
             </StackPanel>
             <Image x:Name="FrameDisplayImage" Grid.Row="1" Stretch="Uniform"/>
+            <Viewbox Grid.Row="1" HorizontalAlignment="Center">
+                <Grid x:Name="BodyJointsGrid" Background="Transparent" Width="512"  
+                Height="414"/>
+            </Viewbox>
             <ScrollViewer Grid.Row="2" 
             ScrollViewer.HorizontalScrollBarVisibility="Auto" 
             ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -61,6 +65,10 @@
                     <Button Style="{StaticResource FrameSelectorButtonStyle}" 
                             Click="BodyMask_Click">
                         <TextBlock Text="Body Mask" TextWrapping="Wrap"/>
+                    </Button>
+                    <Button Style="{StaticResource FrameSelectorButtonStyle}"
+                            Click="BodyJointsButton_Click">
+                        <TextBlock Text="Body Joints" TextWrapping="Wrap"/>
                     </Button>
                 </StackPanel>
             </ScrollViewer>
