--- a/V2/Tracking_Angles/Tracking_Angles/MainWindow.xaml
+++ b/V2/Tracking_Angles/Tracking_Angles/MainWindow.xaml
@@ -2,15 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Tracking_Angles"
-        Title="Kinect | Color, Depth, Infrared" Height="1080" Width="1920" Loaded="Window_Loaded">
+        Title="Kinect | Color, Depth, Infrared, Tracking" Height="1080" Width="1920" Loaded="Window_Loaded">
     <Grid>
         <Image Name="camera" />
+        <Canvas Name="canvas" />
         <Grid Style="{StaticResource GridButtonsStyle}">
             <StackPanel Style="{StaticResource StackPanelButtonsStyle}">
                 <Button Content="Color" Style="{StaticResource ButtonStyle}" Click="Color_Click" />
                 <Button Content="Depth" Style="{StaticResource ButtonStyle}" Click="Depth_Click" />
                 <Button Content="Infrared" Style="{StaticResource ButtonStyle}" Click="Infrared_Click" />
-                <Button Content="Infrared" Style="{StaticResource ButtonStyle}" Click="Tracking_Click" />
+                <Button Content="Tracking" Style="{StaticResource ButtonStyle}" Click="Tracking_Click" />
             </StackPanel>
         </Grid>
     </Grid>
