--- a/V2/Tracking_Angles/Tracking_Angles/MainWindow.xaml
+++ b/V2/Tracking_Angles/Tracking_Angles/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Tracking_Angles"
-        Title="Kinect | Color, Depth, Infrared, Tracking" Height="1080" Width="1920" Loaded="Window_Loaded">
+        Title="Kinect | Color, Depth, Infrared, Tracking" Height="1080" Width="1920" Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid>
         <Image Name="camera" />
         <Canvas Name="canvas" />
