--- a/V2/Tracking_Angles/Tracking_Angles/MainWindow.xaml
+++ b/V2/Tracking_Angles/Tracking_Angles/MainWindow.xaml
@@ -8,9 +8,9 @@
         <Canvas Name="canvas" />
         <Grid Style="{StaticResource GridButtonsStyle}">
             <StackPanel Style="{StaticResource StackPanelButtonsStyle}">
-                <Button Content="Color" Style="{StaticResource ButtonStyle}" Click="Color_Click" />
+                <!--<Button Content="Color" Style="{StaticResource ButtonStyle}" Click="Color_Click" />
                 <Button Content="Depth" Style="{StaticResource ButtonStyle}" Click="Depth_Click" />
-                <Button Content="Infrared" Style="{StaticResource ButtonStyle}" Click="Infrared_Click" />
+                <Button Content="Infrared" Style="{StaticResource ButtonStyle}" Click="Infrared_Click" />-->
                 <Button Content="Tracking" Style="{StaticResource ButtonStyle}" Click="Tracking_Click" />
             </StackPanel>
         </Grid>
